Añadir search bar para la lista de clientas, retoques diseño y libreria RxBinding

--- a/app/src/main/res/layout/fragment_client_list.xml
+++ b/app/src/main/res/layout/fragment_client_list.xml
@@ -20,6 +20,19 @@
             android:text="@string/client_list_add_client"
             app:backgroundTint="@color/gold" />
 
+        <!-- Search bar -->
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/sbMarginTop"
+            android:background="@drawable/label_form_background"
+            android:drawableEnd="@android:drawable/ic_menu_search"
+            android:hint="@string/client_list_search_by_name"
+            android:inputType="text"
+            android:padding="@dimen/sbPadding"
+            app:drawableTint="@color/gold" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_clients"
             android:layout_width="match_parent"
