--- a/app/src/main/res/layout/item_color_history.xml
+++ b/app/src/main/res/layout/item_color_history.xml
@@ -6,9 +6,25 @@
     android:layout_height="wrap_content"
     android:paddingVertical="8dp">
 
-    <!--Name-->
+    <!--Nail polish brand-->
     <TextView
-        android:id="@+id/txt_name"
+        android:id="@+id/txt_brand"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/txt_date"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Neonail rojo" />
+
+    <!--Reference-->
+    <TextView
+        android:id="@+id/txt_reference"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -30,7 +46,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_delete"
-        app:layout_constraintStart_toEndOf="@id/txt_name"
+        app:layout_constraintStart_toEndOf="@id/txt_reference"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="10/05/2024" />
 
@@ -54,7 +70,7 @@
         android:layout_height="1dp"
         android:background="@color/gold"
         android:layout_marginVertical="@dimen/separatorMargin"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name"
+        app:layout_constraintTop_toBottomOf="@+id/txt_brand"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
