Ordenar colores por fecha descendente. Mostrar marca y referencia de color por separado en el listado. Mejorar diseño de Brand en los formularios. Fix dialog deleteColor

--- a/app/src/main/res/layout/item_color_history.xml
+++ b/app/src/main/res/layout/item_color_history.xml
@@ -16,7 +16,7 @@
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@id/txt_date"
+        app:layout_constraintEnd_toStartOf="@id/txt_reference"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,9 +34,9 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@id/txt_date"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/txt_brand"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Neonail rojo" />
+        tools:text="123456" />
 
     <!--Date-->
     <TextView
