--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,10 +26,11 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <CalendarView
-            android:id="@+id/calendar"
+        <com.kizitonwose.calendar.view.CalendarView
+            android:id="@+id/calendarView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:cv_dayViewResource="@layout/example_3_calendar_day" />
 
     </LinearLayout>
 
