Añadir funcionalidad de Create, Delete y Get Eventos de GoogleCalendar. Falta refactorizar, quitar mock del GET y mejorar arquitectura

--- a/app/src/main/res/layout/example_3_fragment.xml
+++ b/app/src/main/res/layout/example_3_fragment.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/app_name"
+            app:title="@string/home_events"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -73,7 +73,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="20dp"
         app:tint="@color/white"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/gold"
         app:srcCompat="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
