--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,11 +16,11 @@
     <!--Calendar-->
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="example_3_black">#D9000000</color>
-    <color name="example_3_white">#D9FFFFFF</color>
-    <color name="example_3_blue">#1973E8</color>
-    <color name="example_3_blue_light">#D2E3FC</color>
-    <color name="example_3_toolbar_color">#607D8B</color>
+    <color name="calendar_black">#D9000000</color>
+    <color name="calendar_white">#D9FFFFFF</color>
+    <color name="calendar_blue">#1973E8</color>
+    <color name="calendar_blue_light">#D2E3FC</color>
+    <color name="calendar_toolbar_color">#607D8B</color>
     <color name="brown_700">#5D4037</color>
     <color name="blue_grey_700">#455A64</color>
     <color name="orange_800">#EF6C00</color>
