Mostar horas de las citas y fix mensajes de errores

--- a/app/src/main/res/layout/item_appointment_history.xml
+++ b/app/src/main/res/layout/item_appointment_history.xml
@@ -16,11 +16,23 @@
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@id/txt_date"
+        app:layout_constraintEnd_toStartOf="@id/txt_time"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Nivelación" />
+
+    <!--Hour-->
+    <TextView
+        android:id="@+id/txt_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/txt_date"
+        app:layout_constraintStart_toEndOf="@id/txt_service"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="10:00-12:00" />
 
     <!--Date-->
     <TextView
@@ -29,8 +41,9 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:layout_marginHorizontal="8dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_delete"
-        app:layout_constraintStart_toEndOf="@id/txt_service"
+        app:layout_constraintStart_toEndOf="@id/txt_time"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="10/05/2024" />
 
@@ -39,7 +52,6 @@
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:src="@drawable/ic_delete"
         android:textColor="@color/black"
         android:textSize="20sp"
