--- a/app/src/main/res/layout/event_item_view.xml
+++ b/app/src/main/res/layout/event_item_view.xml
@@ -6,11 +6,28 @@
     android:background="?attr/selectableItemBackground"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/itemEventText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        tools:text="Play football with friends" />
+        android:orientation="horizontal">
+
+        <!--Title-->
+        <TextView
+            android:id="@+id/txt_event_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="16sp"
+            tools:text="Iván - Nivelación" />
+
+        <!--Time-->
+        <TextView
+            android:id="@+id/txt_event_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            tools:text="10:00-12:00" />
+
+    </LinearLayout>
 
 </FrameLayout>
