Comments y ocultar menú pantalla "Message"

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,9 +10,9 @@
         android:icon="@drawable/ic_clients_selector"
         android:title="@string/nav_bar_client" />
 
-    <item
+    <!-- TODO <item
         android:id="@+id/messageFragment"
         android:icon="@drawable/ic_message_selector"
-        android:title="@string/nav_bar_message" />
+        android:title="@string/nav_bar_message" />-->
 
 </menu>
