--- a/app/src/main/res/layout/item_appointment_history.xml
+++ b/app/src/main/res/layout/item_appointment_history.xml
@@ -11,16 +11,25 @@
         android:id="@+id/txt_service"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@id/txt_time"
+        app:layout_constraintEnd_toStartOf="@id/iv_assisted"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Nivelación" />
+
+    <!--Assisted-->
+    <ImageView
+        android:id="@+id/iv_assisted"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginHorizontal="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/txt_time"
+        app:layout_constraintStart_toEndOf="@id/txt_service"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--Hour-->
     <TextView
@@ -30,7 +39,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/txt_date"
-        app:layout_constraintStart_toEndOf="@id/txt_service"
+        app:layout_constraintStart_toEndOf="@id/iv_assisted"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="10:00-12:00" />
 
