--- a/app/src/main/res/layout/fragment_appointment_history_list.xml
+++ b/app/src/main/res/layout/fragment_appointment_history_list.xml
@@ -14,14 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!--<Button
-            android:id="@+id/btn_add_color"
-            style="@style/Button"
-            android:text="@string/color_history_list_add_color"
-            app:backgroundTint="@color/gold" />-->
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_colors"
+            android:id="@+id/rv_appointments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/padding"
