--- a/app/src/main/res/layout/fragment_colors_history_detail.xml
+++ b/app/src/main/res/layout/fragment_colors_history_detail.xml
@@ -50,7 +50,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--Birthday-->
+            <!--Date-->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/et_date"
                 style="@style/Form"
