Make Single to Completable for UpdateEvent and UpdateAppointment. Manage assistance for event and appointment. Refactor dateTime events for format and parse errors in DateUtils

--- a/app/src/main/res/layout/event_item_view.xml
+++ b/app/src/main/res/layout/event_item_view.xml
@@ -15,7 +15,7 @@
         <!--Title-->
         <TextView
             android:id="@+id/txt_event_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="16sp"
