--- a/app/src/main/res/layout/fragment_appointment_history_list.xml
+++ b/app/src/main/res/layout/fragment_appointment_history_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding">
+    android:paddingHorizontal="@dimen/padding">
 
     <!--Pending appointments-->
     <LinearLayout
@@ -76,7 +76,6 @@
             android:id="@+id/rv_made_appointments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/padding"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_appointment_history" />
 
