--- a/app/src/main/res/layout/fragment_client_list.xml
+++ b/app/src/main/res/layout/fragment_client_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding">
+    android:paddingHorizontal="@dimen/padding">
 
     <LinearLayout
         android:id="@+id/layout"
@@ -25,7 +25,7 @@
             android:id="@+id/et_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/sbMarginTop"
+            android:layout_marginVertical="@dimen/sbMarginVertical"
             android:background="@drawable/label_form_background"
             android:drawableEnd="@android:drawable/ic_menu_search"
             android:hint="@string/client_list_search"
@@ -33,11 +33,11 @@
             android:padding="@dimen/sbPadding"
             app:drawableTint="@color/gold" />
 
+        <!--List-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_clients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_client" />
 
