--- a/app/src/main/res/layout/fragment_color_history_list.xml
+++ b/app/src/main/res/layout/fragment_color_history_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding">
+    android:paddingHorizontal="@dimen/padding">
 
     <LinearLayout
         android:id="@+id/layout"
@@ -24,7 +24,7 @@
             android:id="@+id/rv_colors"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding"
+            android:layout_marginTop="@dimen/padding"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_color_history" />
 
