--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/homeFragmentRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -32,13 +30,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Calendar -->
             <com.kizitonwose.calendar.view.CalendarView
                 android:id="@+id/exThreeCalendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cv_daySize="seventhWidth"
                 app:cv_dayViewResource="@layout/calendar_day"
                 app:cv_monthHeaderResource="@layout/calendar_header" />
 
+            <!-- Fecha seleccionada + botón -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -69,13 +70,13 @@
                     app:tint="@color/white" />
             </LinearLayout>
 
+            <!--Event list-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/exThreeRv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false" />
+                tools:listitem="@layout/item_calendar_event" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
