--- a/app/src/main/res/layout/fragment_client_list.xml
+++ b/app/src/main/res/layout/fragment_client_list.xml
@@ -20,18 +20,14 @@
             android:text="@string/client_list_add_client"
             app:backgroundTint="@color/gold" />
 
-        <!-- Search bar -->
-        <EditText
-            android:id="@+id/et_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/sbMarginVertical"
-            android:background="@drawable/label_form_background"
-            android:drawableEnd="@android:drawable/ic_menu_search"
-            android:hint="@string/client_list_search"
-            android:inputType="text"
-            android:padding="@dimen/sbPadding"
-            app:drawableTint="@color/gold" />
+        <!--Search bar-->
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/SearchBar">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_search"
+                style="@style/SearchBarText" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!--List-->
         <androidx.recyclerview.widget.RecyclerView
