--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Calendar -->
+            <!--Calendar-->
             <com.kizitonwose.calendar.view.CalendarView
                 android:id="@+id/exThreeCalendar"
                 android:layout_width="match_parent"
@@ -39,7 +39,6 @@
                 app:cv_dayViewResource="@layout/calendar_day"
                 app:cv_monthHeaderResource="@layout/calendar_header" />
 
-            <!-- Fecha seleccionada + botón -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,6 +49,7 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="12dp">
 
+                <!--Date selected-->
                 <TextView
                     android:id="@+id/exThreeSelectedDateText"
                     android:layout_width="0dp"
@@ -61,6 +61,7 @@
                     android:textSize="14sp"
                     tools:text="7 Jan, 2019" />
 
+                <!--Add event day-->
                 <ImageButton
                     android:id="@+id/btn_create_event"
                     android:layout_width="wrap_content"
