Change return Completable to Single for UpdateClientUC. Add enabled in Client. Add filterEnabled for listClients and client list. Add enabled/disabled in ClientForm

--- a/app/src/main/res/layout/fragment_client_detail.xml
+++ b/app/src/main/res/layout/fragment_client_detail.xml
@@ -295,6 +295,16 @@
 
             </LinearLayout>
 
+            <!--Action disabled client-->
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/switch_action_disabled"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/client_detail_action_disabled"
+                android:textSize="@dimen/textSize"
+                app:thumbTint="@color/switch_thumb_tint"
+                app:trackTint="@color/switch_track_tint"/>
+
             <!--Button save-->
             <Button
                 android:id="@+id/btn_save"
