--- a/app/src/main/res/layout/fragment_client_list.xml
+++ b/app/src/main/res/layout/fragment_client_list.xml
@@ -21,13 +21,23 @@
             app:backgroundTint="@color/gold" />
 
         <!--Search bar-->
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SearchBar">
+        <com.google.android.material.textfield.TextInputLayout style="@style/SearchBar">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_search"
                 style="@style/SearchBarText" />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <!--Filter list disabled clients-->
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switch_show_disabled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/client_list_hide_disabled"
+            android:textSize="@dimen/placeholderTextSize"
+            app:thumbTint="@color/switch_thumb_tint"
+            app:trackTint="@color/switch_track_tint"/>
 
         <!--List-->
         <androidx.recyclerview.widget.RecyclerView
